--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "classnames": "2.3.2",
+    "lodash": "4.17.21"
+    
   }
 }
